<resources>
    <string name="app_name">Hostel Finder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Not Logged in</string>
    <string name="nav_header_subtitle">Please Log in</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="google_map_api_key">AIzaSyASV2_M3qDtIpB7e9yMpjFwlY-LzwEVKc0</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_location">Map</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_admin_home">Home</string>
    <string name="menu_admin_AllUser">User Manage</string>
    <string name="menu_admin_enquiry">All Enquiry</string>
    <string name="menu_admin_AllOwner">Owner Manage</string>
    <string name="menu_admin_requests">New Requests</string>
    <string name="no_internet">There is no internet connection. Please try again later</string>
    <string name="not_log_in">Not Logged In</string>
    <string name="please_log_in">Please Log in.</string>

    <string name="dialog_message">Do you want to Delete?</string>
    <string name="dialog_title">Delete user?</string>


    <string name="lorem_ipsum_dolor_sit_amet_consetetur_nsadipscing_elitr_sed_diam_nonumy">Lorem ipsum dolor sit amet, consetetur\nsadipscing elitr, sed diam nonumy</string>

    <string name="what_is_lorem_ipsum">What is Lorem Ipsum?</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi elementum, erat eu volutpat semper, magna nisl rutrum mi, eu convallis mauris mi vel tortor. Nulla vehicula orci a semper tincidunt. Nam consectetur interdum orci, ut venenatis diam lobortis ut. Aliquam mollis nunc enim, in fermentum tortor pulvinar vel. Cras at nisl risus. Mauris vehicula ultricies justo tempus lacinia. Donec laoreet magna ut sapien convallis fermentum. Curabitur lacinia augue a urna aliquet accumsan at a purus. Phasellus varius, arcu quis vestibulum dignissim, elit nisl ullamcorper lectus, at placerat risus enim id lectus.
Proin vel malesuada tellus. Maecenas molestie, ipsum non dapibus viverra, mauris est convallis arcu, et eleifend quam eros nec nisl. Quisque pulvinar enim metus, nec dapibus tellus tempor non. Nulla sed placerat est, vitae volutpat turpis.
</string>
    <string name="pricing_details">Pricing Details:</string>
    <string name="description_subtext">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi elementum, erat eu volutpat semper, magna nisl rutrum mi, eu convallis mauris mi vel tortor. Nulla vehicula orci a semper tincidunt. Nam consectetur interdum orci, ut venenatis diam lobortis ut. Aliquam mollis nunc enim, in fermentum tortor pulvinar vel. Cras at nisl risus. Mauris vehicula ultricies justo tempus lacinia. Donec laoreet magna ut sapien convallis fermentum. Curabitur lacinia augue a urna aliquet accumsan at a purus. Phasellus varius, arcu quis vestibulum dignissim, elit nisl ullamcorper lectus, at placerat risus enim id lectus.
    </string>

    <string name="enquiry">Enquiry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="onwer_login">Are you Hostel Owner?Click to Login.</string>
    <string name="longitude">Longitude</string>


    <!--Spinner for level education-->
    <string-array name="level">
        <item>School level</item>
        <item>+2</item>
        <item>Bachelor</item>
        <item>Master</item>
        <item>Others</item>
    </string-array>
    <string-array name="plustwo_stream">
        <item>Science</item>
        <item>Management</item>
    </string-array>
    <string-array name="bachelor_stream">
        <item>MBBS</item>
        <item>Engineering</item>
        <item>BBA</item>
        <item>BBM</item>
        <item>BBS</item>
        <item>Others</item>
    </string-array>
    <string-array name="masterr_stream">
        <item>MD</item>
        <item>ME</item>
        <item>MBA</item>
        <item>MBM</item>
        <item>MBS</item>
        <item>Others</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_user_pending_enquiry">UserPendingEnquiryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>