<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_hostel_location"
            android:title="@string/menu_location" />
        <item
            android:id="@+id/nav_Login"
            android:icon="@drawable/ic_login"
            android:title="@string/menu_login" />



    </group>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="Share" />

            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/menu_exit" />
        </menu>
    </item>
</menu>