<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/owner_nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/owner_nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/owner_nav_enquiry"
            android:icon="@drawable/ic_email"
            android:title="@string/enquiry" />
        <item
            android:id="@+id/owner_nav_paid"
            android:icon="@drawable/ic_paid_24"
            android:title="Paid User" />
        <item
            android:id="@+id/owner_nav_Login"
            android:icon="@drawable/ic_login"
            android:title="@string/menu_login" />



    </group>

</menu>